<resources>
    <string name="app_name">Patryk_Malinowski</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="view">View</string>
    <string name="_9_00">9:00</string>
    <string name="time">Time:</string>
    <string name="view_appointments_by_date">View Appointments By Date</string>
    <string name="view_all_appointments">View All Appointments</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="duration_1_hour">Duration: 1 Hour</string>
    <string name="selected_date">Selected Date:</string>
    <string name="please_select_an_option_below">Please select an option below</string>
    <string name="view_appointments">View Appointments</string>
    <string name="appointments">Appointments</string>
    <string name="welcome">Welcome!</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="search">Search</string>
</resources>